# news-ai-trader

./: .gitignore  README.md  pyproject.toml  show_random_news.py  socket_news.json  test_symbol.py  update_all_data.bat  update_fundamentals.py
apps/ai/: perform_stage_a_news_analyzation.py  perform_stage_b_entity_alias_formation.py  perform_stage_d_news_evaluation.py  playground_prepare_data_for_ai.py
apps/ai/inference/: lmstudio_client.py
apps/ai/mcp/: local_market_infos.py
apps/ai/pipelines/: news_analyzer.py  news_analyzer_2.py
apps/ai/tests/: test_news_analyzer.py
apps/ingest/: get_raw_news.py  ibkr_scraper.py  perform_stage_c_entity_grounding.py  rest_news_collector.py
apps/ingest/alpaca_client/: client.py
apps/ingest/tests/: test_alpaca_client.py
apps/ingest/web_search/: __init__.py  config.py  init_cache.py  normalizer.py  populate_cache.py  providers.py  quota_status.py  rate_limiter.py  (+2 more)
apps/market_data/: find_anomaly_news.py  fts_alias_playground.py  not_found_entities.xlsx  statistic_from_stage_a_b.py  test_fundamentals.py  update_fundamentals.py  update_infos.py  update_infos_and_fundamentals.py  update_market_data.py
data/: extract_kline_list.py  extracted_kline_list.csv  manually_collected_news.xlsx
deamons/: news_daemon.py
libs/database/: README.md  connection.py  entities.sql  example_usage.py  extract_db_to_xlsx.py  news_analysis.sql  schema.sql  test_news_functions.py  web_search.sql
libs/utils/: json_sanitize.py  logging_setup.py  news.py
logs/: news_ws.jsonl
playground/: news.json  respA.json  respB.json  yahoo_info.py
(+3 files in other folders)
