[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-ai-trader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "sqlite3",
    "yfinance>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "libs*"]
